<resources>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_name">食药系统</string>
    <string name="sj_admin_actor">监管人员管理</string>
    <string name="sj_admin_msg">对监管单位要参加培训的监管人员进行管理</string>
    <string name="sj_admin_addadmin">增加监管单位</string>
    <string name="sj_admin_project">选择培训项目</string>
    <string name="sj_admin_selectproject">选择培训项目</string>
    <string name="sj_admin_labamsg">通知消息</string>
    <string name="sj_admin_nomsg">暂无消息</string>
    <string name="sj_shenhe_select">查询</string>
    <string name="sj_shenhe_selectmsg">查询条件</string>
    <string name="sj_shenhe_keymsg">关键字 : </string>
    <string name="sj_shenhe_input_key">    可输入用户名,电话</string>
    <string name="sj_shenhe_tiyan">监管人员管理</string>
    <string name="login_input_username">用户名</string>
    <string name="login_input_pwd">密码</string>
    <string name="login_input_code">验证码</string>
    <string name="login_register">注册账号</string>
    <string name="login_login">登录</string>
    <string name="register_msg">本平台将关联所有学员的身份证信息,体检信息,培训信息于一体,请填写准确的信息并核对后注册登录</string>
    <string name="qy_admin">企业管理员</string>
    <string name="qy_user">个人用户</string>
    <string name="qy_gongsi">体验机构</string>
    <string name="register_input_username">用户名,6-20字符</string>
    <string name="register_input_pwd">设置密码,6-20字符</string>
    <string name="register_input_repwd">请再次确认密码</string>
    <string name="register_input_check">验证码</string>
    <string name="quick_register">立即注册</string>
    <string name="sj_law_number">执法编号 : </string>
    <string name="sj_law_type">执法类型 : </string>
    <string name="sj_lay_list">执法记录列表</string>
    <string name="sj_law_time">执法时间 :</string>
    <string name="jg_update_man">修改监管人员</string>
    <string name="jg_username">用 户 名 :</string>
    <string name="jg_name">姓    名 : </string>
    <string name="jg_pwd">密 码 : </string>
    <string name="jg_repwd">确认密码 : </string>
    <string name="jg_sex">性 别 : </string>
    <string name="jg_idcard">身份证号 :</string>
    <string name="jg_company">单位名称 :</string>
    <string name="jg_emial">邮 箱 :</string>
    <string name="jg_phone">手机号码 :</string>
    <string name="jg_zhiwei">职位 :</string>
    <string name="jg_birthday">出生日期 :</string>
    <string name="jg_work_type">工 种 : </string>
    <string name="jg_xueli">学历 :</string>
    <string name="jg_address">单位地址 :</string>
    <string name="jg_home_welcome">欢迎</string>
    <string name="sj_admin_username">用户名:</string>
    <string name="sj_admin_register_time">注册时间:</string>
    <string name="sj_shenhe_return">返回</string>
    <string name="jadw_admin_add">新增</string>
    <string name="shiji_jianguanmanager_search">搜索内容 :</string>
    <string name="shiji_jianguanmanager_input_key">姓名,用户名,手机号</string>
    <string name="shiji_jianguanmanager_register_time">注册时间 : </string>
    <string name="shiji_jianguanmanager_list">监管人员列表</string>
    <string name="shiji_jianguanmanager_add">新 增</string>
    <string name="shiji_jianguaninfo_username">用 户 名 :</string>
    <string name="shiji_jianguaninfo_companyname">公司名称 : </string>
    <string name="shiji_jianguaninfo_usercount">单位人数 : </string>
    <string name="shiji_jianguaninfo_admin">管 理 员 : </string>
    <string name="shiji_jianguaninfo_emial">邮 箱 : </string>
    <string name="shiji_jianguaninfo_phone">手机号码 :</string>
    <string name="shiji_jianguaninfo_type">行业领域 :</string>
    <string name="shiji_jianguaninfo_team">监管队伍</string>
    <string name="shiji_jianguaninfo_address">单位地址 :</string>
    <string name="commit">提交</string>
    <string name="shiji_notifylist_faqi">发起单位 :</string>
    <string name="shiji_notifylist_time">培训起始时间 : </string>
    <string name="excel_export">excel导出</string>
    <string name="back">返回</string>
    <string name="login_addjianguandanwei">增加监管单位</string>
    <string name="login_shengjuadmin">省局管理员</string>
    <string name="login_shengjuman">省局个人</string>
    <string name="login_shijiadmin">市级管理员</string>
    <string name="login_qiyeadmin">企业管理员</string>
    <string name="login_xianquAdmin">县区级管理员</string>
    <string name="menu">菜单</string>
    <string name="load">加载中</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string-array name="xueli">
        <item>高中</item>
        <item>专科</item>
        <item>本科</item>
        <item>研究生</item>
        <item>博士</item>
    </string-array>
    <string-array name="zengjiajianguan0">
        <item >首页</item>
        <item >个人用户管理</item>
        <item >企业管理</item>
        <item >信息卡管理</item>
        <item >监管单位管理</item>
        <item >执法记录管理</item>
    </string-array>
    <string-array name="zengjiajianguan2">
        <item >添加管理员</item>
        <item >添加企业管理员</item>
    </string-array>
    <string-array name="zengjiajianguan1">
        <item >安全设置</item>
    </string-array>
    <string-array name="shengjiguanliyuan0">
        <item>首页</item>
    </string-array>
    <string-array name="shengjiguanliyuan1">
        <item>监管单位信息</item>
        <item>监管人员管理</item>
    </string-array>
    <string-array name="shengjiguanliyuan2">
        <item>培训通知列表</item>
    </string-array>
    <string-array name="shengjiguanliyuan3">
        <item>体检机构审核</item>
    </string-array>
    <string-array name="shengjiguanliyuan4">
        <item>企业管理</item>
    </string-array>
    <string-array name="shengjiguanliyuan5">
        <item>培训项目报名</item>
        <item>已报培训项目</item>
        <item>通知消息</item>
    </string-array>
    <string-array name="shengjiguanliyuan6">
        <item>监管单位统计分析</item>
        <item>执法记录统计分析</item>
        <item>企业用户统计分析</item>
        <item>个人用户统计分析</item>
    </string-array>
    <string-array name="shengjiguanliyuan7">
        <item>体检统计</item>
        <item>体检查询</item>
    </string-array>
    <string-array name="shengjiguanliyuan8">
        <item>法律法规文档下载</item>
        <item>应用模板下载</item>
        <item>应用插件下载</item>
        <item>其他相关下载</item>
    </string-array>
    <string-array name="shengjiguanliyuan9">
        <item>安全设置</item>
    </string-array>
    <string-array name="shengjugeren0">
        <item>首页</item>
    </string-array>
    <string-array name="shengjugeren1">
        <item>监管人员信息</item>
        <item>我的证书</item>
        <item>我的执法</item>
        <item>通知消息</item>
    </string-array>
    <string-array name="shengjugeren2">
        <item>已报培训项目</item>
    </string-array>
    <string-array name="shengjugeren3">
        <item>企业信息列表</item>
        <item>企业报名信息</item>
    </string-array>
    <string-array name="shengjugeren4">
        <item>监管单位统计分析</item>
        <item>执法记录统计分析</item>
        <item>企业用户统计分析</item>
        <item>个人用户统计分析</item>
    </string-array>
    <string-array name="shengjugeren5">
        <item>体检统计</item>
        <item>体检查询</item>
    </string-array>
    <string-array name="shengjugeren6">
        <item>法律法规文档下载</item>
        <item>应用模板下载</item>
        <item>应用插件下载</item>
        <item>其他相关下载</item>
    </string-array>
    <string-array name="shengjugeren7">
        <item>安全设置</item>
    </string-array>
    <string-array name="shiji0">
        <item>首页</item>
    </string-array>
    <string-array name="shiji1">
        <item>监管单位信息</item>
        <item>监管人员管理</item>
    </string-array>
    <string-array name="shiji2">
        <item>培训通知管理</item>
    </string-array>
    <string-array name="shiji3">
        <item>企业管理</item>
    </string-array>
    <string-array name="shiji4">
        <item>培训项目报名</item>
        <item>已报培训项目</item>
        <item>通知消息</item>
    </string-array>
    <string-array name="shiji5">
        <item>监管单位统计分析</item>
        <item>执法记录统计分析</item>
        <item>企业用户统计分析</item>
        <item>个人用户统计分析</item>
    </string-array>
    <string-array name="shiji6">
        <item>体检统计</item>
        <item>体检查询</item>
    </string-array>
    <string-array name="shiji7">
        <item>法律法规文档下载</item>
        <item>应用模板下载</item>
        <item>应用插件下载</item>
        <item>其他相关下载</item>
    </string-array>
    <string-array name="shiji8">
        <item>安全设置</item>
    </string-array>
    <string-array name="qiye0">
        <item>首页</item>
    </string-array>
    <string-array name="qiye1">
        <item>企业信息</item>
        <item>员工管理</item>
        <item>体检报告管理</item>
        <item>信息卡管理</item>
    </string-array>
    <string-array name="qiye2">
        <item>选购培训项目</item>
        <item>培训项目订单</item>
        <item>已报培训项目</item>
        <item>通知消息</item>
    </string-array>
    <string-array name="qiye3">
        <item>法律法规文档下载</item>
        <item>应用插件下载</item>
        <item>其他相关下载</item>
    </string-array>
    <string-array name="qiye4">
        <item>安全设置</item>
    </string-array>
    <string-array name="xianji0">
        <item>首页</item>
    </string-array>
    <string-array name="xianji1">
        <item>用户信息</item>
        <item>我的证书</item>
        <item>通知消息</item>
        <item>我的信息卡</item>
        <item>我的体检报告</item>
    </string-array>
    <string-array name="xianji2">
        <item>选购培训项目</item>
        <item>培训项目订单</item>
        <item>已报培训项目</item>
        <item>通知消息</item>
    </string-array>
    <string-array name="xianji3">
        <item>法律法规文档下载</item>
        <item>应用模板下载</item>
        <item>应用插件下载</item>
        <item>其他相关下载</item>
    </string-array>
    <string-array name="xianji4">
        <item>安全设置</item>
    </string-array>
    <string-array name="ShiJiAdmin">
        <item >首页</item>
        <item >选购培训项目</item>
        <item >培训项目订单</item>
        <item >已报培训项目</item>
        <item >通知消息</item>
        <item >执法记录管理</item>
    </string-array>
    <string-array name="CompanyAdmin">
        <item >首页</item>
        <item >选购培训项目</item>
        <item >培训项目订单</item>
        <item >已报培训项目</item>
        <item >通知消息</item>
        <item >执法记录管理</item>
    </string-array>
    <string-array name="XianAdmin">
        <item >监管人员首页</item>
        <item >监管人员中心</item>
        <item >培训学习</item>
        <item >企业管理</item>
        <item >监管统计</item>
        <item >体检信息</item>
    </string-array>
    <string-array name="gerenyonghu1">
        <item>首页</item>
    </string-array>
    <string-array name="gerenyonghu2">
        <item>用户信息</item>
        <item>我的证书</item>
        <item>我的信息卡</item>
        <item>我的体检报告</item>
    </string-array>
    <string-array name="gerenyonghu3">
        <item>已报培训项目</item>
        
    </string-array>
    <string-array name="gerenyonghu4">
        <item>我的体检报告</item>
    </string-array>
    <string-array name="gerenyonghu5">
        <item>法律法规文档下载</item>
        <item>应用插件下载</item>
        <item>其他相关下载</item>
    </string-array>
    <string-array name="gerenyonghu6">
        <item>重置密码</item>
    </string-array>
    <string-array name="hangyeleixing">
        <item>食品</item>
        <item>药品</item>
        <item>化妆品</item>
        <item>保健品</item>
        <item>医疗器械</item>
    </string-array>
    <string-array name="qiye_zhiwu">
        <item >生产岗位</item>
        <item >设计岗位</item>
        <item >售后岗位</item>
        <item >销售岗位</item>
        <item >管理岗位</item>
        <item >后勤岗位</item>
        <item >人事岗位</item>
        <item >其他岗位</item>
    </string-array>
    <string-array name="qiye_xueli">
        <item >小学</item>
        <item >初中</item>
        <item >中专</item>
        <item >高中</item>
        <item >大专</item>
        <item >本科</item>
        <item >硕士</item>
        <item >博士</item>
    </string-array>
    <string-array name="shifouhege">
        <item >是</item>
        <item >否</item>
    </string-array>
    <string-array name="tijian">
        <item>首页</item>
        <item>列表</item>
        <item>医院信息</item>
        <item>修改密码</item>
    </string-array>
</resources>