<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/global_bg_gray"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qy_admin"
            android:textColor="@color/global_black"
            android:layout_marginLeft="40dp"
            android:textSize="16sp"
            android:padding="5dp"
            android:clickable="true"
            android:id="@+id/company_a_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qy_user"
            android:textColor="@color/global_black"

            android:layout_marginLeft="40dp"
            android:textSize="16sp"
            android:padding="5dp"
            android:clickable="true"
            android:id="@+id/user_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qy_gongsi"
            android:textColor="@color/global_white"

            android:background="@drawable/fillet_blue_bg"
            android:layout_marginLeft="40dp"
            android:textSize="16sp"
            android:padding="5dp"
            android:clickable="true"
            android:id="@+id/company_2_btn" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/fillet_white_bg"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_msg"
            android:textColor="@color/global_red"
            android:layout_margin="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/register_input_username"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp"
            android:background="@null"
            android:id="@+id/username" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/global_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/register_input_pwd"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp"
            android:background="@null"
            android:id="@+id/password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/global_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/register_input_repwd"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp"
            android:background="@null"
            android:id="@+id/repassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/global_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_but_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="135dp"
            android:layout_marginBottom="15dp"
            android:text="@string/quick_register"
            android:id="@+id/register" />


    </LinearLayout>


</LinearLayout>