<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/global_bg_blue"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/guohui"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_icon"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_username"
        android:textColorHint="@color/login_hint"
        android:background="@null"
        android:layout_marginTop="250dp"
        android:textColor="@color/login_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/username" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#87cdf5"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="280dp"
        />

    <EditText
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:background="@null"
        android:textColor="@color/login_text"
        android:layout_height="wrap_content"
        android:hint="@string/login_input_pwd"
        android:textColorHint="@color/login_hint"
        android:layout_marginTop="300dp"
        android:inputType="textPassword"
        android:id="@+id/password" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#87cdf5"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="330dp"
        />

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="375dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="160dp"
            android:background="@null"
            android:id="@+id/checkcode"
            android:textColor="@color/login_text"
            android:layout_height="wrap_content"
            android:textColorHint="@color/login_hint"
            android:hint="@string/login_input_code"
            />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/image"
            />

    </LinearLayout>-->


<!--
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#87cdf5"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="190dp"
        android:layout_marginTop="410dp"
        />
-->


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textSize="18sp"
        android:textColor="@color/login_register"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/login_blue_solid"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        android:id="@+id/register" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:textColor="@color/login_login"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="220dp"
        android:textSize="18sp"
        android:background="@drawable/login_login_blue_solid"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/login" />



</RelativeLayout>