<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/global_bg_gray"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qy_admin"
            android:textColor="@color/global_white"
            android:layout_marginLeft="40dp"
            android:textSize="16sp"
            android:padding="5dp"
            android:clickable="true"
            android:background="@drawable/fillet_blue_bg"
            android:id="@+id/company_a_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qy_user"
            android:textColor="@color/global_black"
            android:layout_marginLeft="40dp"
            android:textSize="16sp"
            android:padding="5dp"
            android:clickable="true"
            android:id="@+id/user_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qy_gongsi"
            android:textColor="@color/global_black"
            android:layout_marginLeft="40dp"
            android:textSize="16sp"
            android:padding="5dp"
            android:visibility="gone"
            android:clickable="true"
            android:id="@+id/company_2_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fillet_white_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register_msg"
            android:textColor="@color/global_red" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/register_input_username"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:background="@color/global_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/register_input_pwd"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:background="@color/global_gray" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/register_input_repwd"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:background="@color/global_gray" />

        <EditText
            android:id="@+id/qiyemingcheng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="企业名称"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:background="@color/global_gray" />

        <EditText
            android:id="@+id/lianxirenxingming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="企业联系人姓名"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:background="@color/global_gray" />

        <EditText
            android:id="@+id/xukezhengbianhao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="许可证编号"
            android:textColorHint="@color/global_gray"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:background="@color/global_gray" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="企业地址:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/qiyedizhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="选择地址"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:background="@color/global_gray" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></LinearLayout>

            <RadioButton
                android:id="@+id/eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="食品"
                android:textColor="@color/global_gray" />

            <RadioButton
                android:id="@+id/yao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="药品"
                android:textColor="@color/global_gray" />

            <RadioButton
                android:id="@+id/huazhuang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="化妆品"
                android:textColor="@color/global_gray" />

            <RadioButton
                android:id="@+id/baojian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="保健品"
                android:textColor="@color/global_gray" />

            <RadioButton
                android:id="@+id/yiliao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="医疗器械"
                android:textColor="@color/global_gray" />
        </RadioGroup>


        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="135dp"
            android:background="@drawable/blue_but_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/quick_register" />


    </LinearLayout>


</LinearLayout>

</ScrollView>